Configure mongo connection

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-validator": "^0.12.2",
     "config": "^3.3.1",
     "dotenv": "^8.2.0",
+    "mongodb": "^3.5.7",
     "passport": "^0.4.1",
     "passport-azure-ad": "^4.2.1",
     "reflect-metadata": "^0.1.13",
@@ -54,7 +55,7 @@
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
-    "ts-jest": "25.2.1",
+    "ts-jest": "^26.0.0",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
